# baseledger-plateau

./: .gitignore  README.md  readme.md
baseledger/: .env  .gitignore  Makefile  config.yml  go.mod  go.sum
baseledger-bridge/: .env  config.yml  go.mod  go.sum  readme.md
baseledger-bridge/app/: app.go  simulation_test.go
baseledger-bridge/cmd/baseledger-bridged/: main.go
baseledger-bridge/common/: globals.go
baseledger-bridge/docs/static/: openapi.yml
baseledger-bridge/ops/: deployment_and_chain_upgrade.md
baseledger-bridge/proto/baseledger/: baseledger_transaction.proto  genesis.proto  params.proto  query.proto  tx.proto
baseledger-bridge/proto/baseledgerbridge/: attestation.proto  genesis.proto  params.proto  query.proto  tx.proto
baseledger-bridge/proto/bridge/: attestation.proto  genesis.proto  params.proto  query.proto  tx.proto
baseledger-bridge/testutil/keeper/: baseledger.go  baseledgerbridge.go
baseledger-bridge/testutil/network/: network.go
baseledger-bridge/vue/src/views/: Types.vue
baseledger-bridge/x/baseledger/: genesis.go  genesis_test.go  handler.go  module.go  module_simulation.go
baseledger-bridge/x/baseledger/keeper/: baseledger_transaction.go  keeper.go  (+12 more)
baseledger-bridge/x/baseledgerbridge/: abci.go  genesis.go  genesis_test.go  handler.go  module.go  module_simulation.go
baseledger-bridge/x/bridge/: abci.go  genesis.go  genesis_test.go  handler.go  module.go  module_simulation.go
baseledger/app/: app.go  simulation_test.go
baseledger/cmd/baseledger-bridged/: main.go
baseledger/common/: globals.go
baseledger/docs/static/: openapi.yml
baseledger/ops/: clean.sh  cosmovisor.service  deploy_testnet_node.md  deployment_and_chain_upgrade.md  orchestrator.service  param.json  prereqs.sh  start_first_node.sh  start_second_node.sh
baseledger/proto/bridge/: attestation.proto  genesis.proto  orchestrator_validator_address.proto  params.proto  query.proto  tx.proto
baseledger/proto/proof/: baseledger_transaction.proto  genesis.proto  params.proto  query.proto  tx.proto
baseledger/testutil/keeper/: baseledger.go  baseledgerbridge.go
baseledger/testutil/network/: network.go
baseledger/testutil/sample/: sample.go
baseledger/x/bridge/: abci.go  genesis.go  genesis_test.go  handler.go  handler_test.go  module.go  module_simulation.go
baseledger/x/proof/: genesis.go  genesis_test.go  handler.go  module.go  module_simulation.go
e2e/: README.md  package-lock.json  package.json
e2e/test/: baseledger.test.js  baseledger_abi.json
mainnet/v1.0.0/: genesis.json
mainnet/v1.0.0/baseledger/: checksum.txt  cosmovisor.service
mainnet/v1.0.0/docs/: add_node_to_baseledger_mainnet.md  add_replicator_node_to_baseledger_mainnet.md  initial_node_setup.md  prereqs.sh  prereqs_custom_location.sh  prereqs_replicator.sh  running_a_node_start_here.md  unjail_validator.md
mainnet/v1.0.0/orchestrator/: orchestrator.service
orchestrator/: Cargo.toml
orchestrator/baseledger_bridge/: Cargo.toml
orchestrator/baseledger_bridge/src/: args.rs  config.rs  main.rs  orchestrator.rs
orchestrator/baseledger_bridge/src/keys/: mod.rs  register_orchestrator_address.rs
orchestrator/baseledger_proto/: Cargo.toml
orchestrator/baseledger_proto/src/: lib.rs
orchestrator/baseledger_proto/src/prost/: baseledger.baseledger.bridge.rs  baseledger.baseledgerbridge.baseledgerbridge.rs
orchestrator/cosmos_gravity/: Cargo.toml
orchestrator/cosmos_gravity/src/: lib.rs  query.rs  send.rs  utils.rs
orchestrator/ethereum_oracle/: Cargo.toml
orchestrator/ethereum_oracle/src/: ethereum_event_watcher.rs  lib.rs  main_loop.rs  oracle_resync.rs  ubt_price_fetcher.rs
orchestrator/gbt/: Cargo.toml
orchestrator/gbt/src/: args.rs  config.ini  config.rs  main.rs  orchestrator.rs  utils.rs
orchestrator/gbt/src/keys/: mod.rs  register_orchestrator_address.rs
orchestrator/gravity_proto/src/: lib.rs
orchestrator/gravity_proto/src/prost/: baseledger.baseledgerbridge.baseledgerbridge.rs  gravity.v1.rs
orchestrator/gravity_utils/: Cargo.toml
orchestrator/gravity_utils/src/: connection_prep.rs
orchestrator/gravity_utils/src/types/: ethereum_events.rs  event_signatures.rs  mod.rs
orchestrator/orchestrator/: Cargo.toml
orchestrator/orchestrator/src/: ethereum_event_watcher.rs  main_loop.rs  oracle_resync.rs
orchestrator/proto_build/: Cargo.toml
orchestrator/proto_build/src/: main.rs
orchestrator/utils/: Cargo.toml
orchestrator/utils/src/: connection_prep.rs  error.rs  get_with_retry.rs  lib.rs
orchestrator/utils/src/cosmos/: mod.rs  query.rs  send.rs  utils.rs
orchestrator/utils/src/types/: ethereum_events.rs  event_signatures.rs  mod.rs
poc-contracts/: README.md  baseledger_test.sol  package-lock.json  package.json  white_bridge_erc20.sol
poc-contracts/contracts/: baseledger_test.sol
poc-contracts/scripts/: deploy_baseledger_test.js  sample-script.js
tests/: README.md  add-new-node.sh  build-container.sh  clean.sh  deploy-contracts.sh  orchestrator-phrases  package-lock.json  package.json  run-testnet.sh  setup-orchestrators.sh  setup-validators.sh  start-containers.sh  start.sh  validator-phrases
tests/dockerfile/: Dockerfile
tests/test/: baseledger.test.js
(+232 files in other folders)
