[package]
name = "baseledger_bridge"
version = "1.0.10"
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = {path = "../utils"}
baseledger_proto = {path = "../baseledger_proto/"}
ethereum_oracle = {path = "../ethereum_oracle/"}

deep_space = "2.8"
serde_derive = "1.0"
clarity = "0.5"
clap = {version="3.0.0-rc.7", features=["derive"]}
serde = "1.0"
actix-rt = "2.2"
lazy_static = "1"
url = "2"
web30 = "0.17"
env_logger = "0.9"
log = "0.4"
openssl-probe = "0.1"
tokio = "1.4"
rand = "0.8"
dirs = "4.0"
toml = "0.5"
