# this is a fork of gravity-bridge https://github.com/Gravity-Bridge/Gravity-Bridge
# where authors = ["Justin Kilpatrick <justin@althea.net>"]
# for more details on changes please check readme

[package]
name = "baseledger_bridge"
version = "1.0.10"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = {path = "../utils"}
ethereum_oracle = {path = "../ethereum_oracle/"}

deep_space = "2.8"
serde_derive = "1.0"
clarity = "0.5"
clap = {version="3.0.0-rc.7", features=["derive"]}
serde = "1.0"
actix-rt = "2.2"
env_logger = "0.9"
log = "0.4"
openssl-probe = "0.1"
dirs = "4.0"
toml = "0.5"
