# this is a fork of gravity-bridge https://github.com/Gravity-Bridge/Gravity-Bridge
# where authors = ["Justin Kilpatrick <justin@althea.net>"]
# for more details on changes please check readme

[package]
name = "ethereum_oracle"
version = "0.1.0"
edition = "2021"

[lib]
name = "ethereum_oracle"
path = "src/lib.rs"

[dependencies]
utils = {path = "../utils"}
baseledger_proto = {path = "../baseledger_proto/"}

deep_space = "2.8"
clarity = "0.5"
web30 = "0.17"
log = "0.4"
tonic = "0.6"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = "1.4.0"
serde_json = "1.0"