# this is a fork of gravity-bridge https://github.com/Gravity-Bridge/Gravity-Bridge
# where authors = ["Justin Kilpatrick <justin@althea.net>"]
# for more details on changes please check readme

[package]
name = "proto_build"
version = "0.1.0"
edition = "2018"

[dependencies]
prost = "0.9"
tonic = "0.6"
prost-build = "0.9"
walkdir = "2"
tonic-build = "0.6"
regex = "1.5"