# this is a fork of gravity-bridge https://github.com/Gravity-Bridge/Gravity-Bridge
# where authors = ["Justin Kilpatrick <justin@althea.net>"]
# for more details on changes please check readme

[package]
name = "utils"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
baseledger_proto = {path = "../baseledger_proto/"}

deep_space = "2.8"
web30 = "0.17"
clarity = "0.5"
num256 = "0.3"
serde_derive = "1.0"
serde = "1.0"
tokio = "1.4"
tonic = "0.6"
num-bigint = "0.4"
log = "0.4"
url = "2"